# zenproxy

./: CLAUDE.md  README.md  config.example.yaml  pyproject.toml  repository.yaml
ha_addon/zenproxy/: Dockerfile  config.yaml  run.sh
src/zenproxy/: __init__.py  aggregator.py  api.py  config.py  device_client.py
tests/: test_aggregator.py  test_api.py  test_config.py  test_device_client.py  test_main.py
